Change literal coded terms to #xxx form.

--- a/docs/process_examples/master.adoc
+++ b/docs/process_examples/master.adoc
@@ -47,7 +47,7 @@ The work reported in this specification has been funded by the following organis
 //
 // --------------------------------------------- TOC -----------------------------------------------
 //
-//toc::[left]
+//toc::#left
 
 //
 // --------------------------------------------- CHAPTERS -----------------------------------------------
