--- a/docs/process_examples/master05-chemo.adoc
+++ b/docs/process_examples/master05-chemo.adoc
@@ -98,9 +98,9 @@ input -- Tracked state
         currency = 3d,
         ranges["/L"] =
             --------------------------------
-            |>1 x 10^9|:          [normal],
-            |0.5 - 1 x 10^9|:     [low],
-            |<0.5 x 10^9|:        [very_low]
+            |>1 x 10^9|:          #high,
+            |0.5 - 1 x 10^9|:     #low,
+            |<0.5 x 10^9|:        #very_low
             --------------------------------
         ;
 
@@ -111,9 +111,9 @@ input -- Tracked state
         currency = 12h,
         ranges["/L"] =
             ------------------------------
-            |>75 x 10^9|:       [normal],
-            |50 - 74 x 10^9|:   [low],
-            |<50 x 10^9|:       [very_low]
+            |>75 x 10^9|:       #normal,
+            |50 - 74 x 10^9|:   #low,
+            |<50 x 10^9|:       #very_low
             ------------------------------
         ;
 
@@ -124,10 +124,10 @@ input -- Tracked state
         currency = 12h,
         ranges["mmol/L"] =
             ----------------------------
-            |<20|:          [normal],
-            |20 - 51|:      [high],
-            |51 - 85|:      [very_high],
-            |>85|:          [crit_high]
+            |<20|:          #normal,
+            |20 - 51|:      #high,
+            |51 - 85|:      #very_high,
+            |>85|:          #crit_high
             ---------------------------
         ;
 
@@ -138,9 +138,9 @@ input -- Tracked state
         currency = 24h,
         ranges["mL/min"] =
             ----------------------
-            |>20|:      [normal],
-            |10 - 20|:  [low],
-            |<10|:      [very_low]  
+            |>20|:      #normal,
+            |10 - 20|:  #low,
+            |<10|:      #very_low  
             ----------------------
         ;
 
@@ -151,16 +151,16 @@ input -- Tracked state
         currency = 24h,
         ranges["mL/min"] =
             --------------------------
-            |>20 |:         [normal],
-            |10 - 20|:      [low],
-            |<10|:          [very_low]
+            |>20 |:         #normal,
+            |10 - 20|:      #low,
+            |<10|:          #very_low
             --------------------------
         ;
 
 rules -- Conditions
 
     high_ipi:
-        Result := ipi_risk ∈ {[ipi_high_risk], [ipi_intermediate_high_risk]}
+        Result := ipi_risk ∈ {#ipi_high_risk, #ipi_intermediate_high_risk}
         ;
        
 rules -- Main
@@ -170,8 +170,8 @@ rules -- Main
     |
     patient_fit:
         Result := not
-            (platelets.in_range ([very_low]) or
-             neutrophils.in_range ([very_low]))
+            (platelets.in_range (#very_low) or
+             neutrophils.in_range (#very_low))
         ;
 
     prednisolone_dose: Quantity
@@ -186,9 +186,9 @@ rules -- Main
         Result := doxorubicin_dose_per_m2 * BSA.bsa_m2
             * case bilirubin.range in
                 ====================
-                [high]:        0.5,
-                [very_high]:   0.25,
-                [crit_high]:   0.0
+                #high:        0.5,
+                #very_high:   0.25,
+                #crit_high:   0.0
                 ====================
         ;
 
@@ -207,15 +207,15 @@ rules -- Main
         Result := cyclophosphamide_dose_per_m2 * BSA.bsa_m2
             * case platelets.range in
                 ===================
-                [normal]:      1,
-                [low]:         0.75
+                #normal:      1,
+                #low:         0.75
                 ===================
                 ;
             * case gfr.range in
                 ===================
-                [normal]:      1,
-                [low]:         0.75,
-                [very_low]:    0.5
+                #normal:      1,
+                #low:         0.75,
+                #very_low:    0.5
                 ===================
         ;
    
@@ -240,8 +240,8 @@ rules -- Main
         Result.add (
             ---------------------------------------------
             age > 60                             ? 1 : 0,
-            staging ∈ {[stage_III], [stage_IV]} ? 1 : 0,
-            ldh.in_range ([normal])              ? 1 : 0,
+            staging ∈ {#stage_III, #stage_IV} ? 1 : 0,
+            ldh.in_range (#normal)              ? 1 : 0,
             ecog > 1                             ? 1 : 0,
             extranodal_sites > 1                 ? 1 : 0
             ---------------------------------------------
@@ -252,10 +252,10 @@ rules -- Main
         Result :=
             case ipi_raw_score in
                 =======================================
-                |0..1|  : [ipi_low_risk],
-                |2|     : [ipi_intermediate_low_risk],
-                |3|     : [ipi_intermediate_high_risk],
-                |4..5|  : [ipi_high_risk];
+                |0..1|  : #ipi_low_risk,
+                |2|     : #ipi_intermediate_low_risk,
+                |3|     : #ipi_intermediate_high_risk,
+                |4..5|  : #ipi_high_risk;
                 =======================================
         ;
 
