--- a/docs/process_examples/master07-cancer_prescribing.adoc
+++ b/docs/process_examples/master07-cancer_prescribing.adoc
@@ -43,8 +43,8 @@ input -- Tracked State
         currency = 60 days
         ranges["%"] =
             ------------------
-            |≥ 14|:   [high],
-            |< 14|:   [normal]
+            |≥ 14|:   #high,
+            |< 14|:   #normal
             ------------------
         ;
 
@@ -52,30 +52,30 @@ input -- Tracked State
         currency = 60 days
         ranges["%"] =
             -------------------
-            |≥ 40|:   [normal],
-            |< 40|:   [low]
+            |≥ 40|:   #normal,
+            |< 40|:   #low
             -------------------
         ;
                 
 rules -- Conditions
         
     er_negative:
-        Result := estrogen_receptor = [negative]
+        Result := estrogen_receptor = #negative
 
     er_positive:
-        Result := estrogen_receptor = [positive]
+        Result := estrogen_receptor = #positive
         
     pr_negative:
-        Result := progesterone_receptor = [negative]
+        Result := progesterone_receptor = #negative
 
     pr_positive:
-        Result := progesterone_receptor = [positive]
+        Result := progesterone_receptor = #positive
         
     her2_negative:
-        Result := her2_expression = [negative]
+        Result := her2_expression = #negative
 
     her2_positive:
-        Result := her2_expression = [positive]
+        Result := her2_expression = #positive
 
     has_non_class_I_heart_failure:
         Result := has_heart_failure_class_II
@@ -84,13 +84,13 @@ rules -- Conditions
                         
     anthracyclines_contraindicated:
         Result := has_transmural_MI
-            or ejection_fraction.in_range ([low])
+            or ejection_fraction.in_range (#low)
             or has_non_class_I_heart_failure
                                 
     taxanes_contraindicated:
         Result := is_type1_diabetic
             or has_allergy_to_taxanes
-            or has_intolerance ([taxanes])
+            or has_intolerance (#taxanes)
         
 rules -- Main
 
@@ -100,26 +100,26 @@ rules -- Main
                 =========================================================
                 er_positive and 
                 her2_negative and 
-                not ki67.in_range ([high]):    [luminal_A],
+                not ki67.in_range (#high):    #luminal_A,
                 ---------------------------------------------------------
                 er_positive and 
                 her2_negative and 
-                ki67.in_range ([high]):        [luminal_B_HER2_negative],
+                ki67.in_range (#high):        #luminal_B_HER2_negative,
                 ---------------------------------------------------------
                 er_positive and 
-                her2_positive:                 [luminal_B_HER2_positive],
+                her2_positive:                 #luminal_B_HER2_positive,
                 ---------------------------------------------------------
                 er_negative and 
                 pr_negative and 
                 her2_positive and 
-                ki67.in_range ([high]):        [HER2],
+                ki67.in_range (#high):        #HER2,
                 ---------------------------------------------------------
                 er_negative and
                 pr_negative and 
                 her2_negative and 
-                ki67.in_range ([high]):        [triple_negative],
+                ki67.in_range (#high):        #triple_negative,
                 ---------------------------------------------------------
-                *:                             [none];
+                *:                             #none;
                 =========================================================
             ;
     
@@ -133,17 +133,17 @@ rules -- Output
                     choice of
                         ========================================================================
                         molecular_subtype in 
-                            {[luminal_B_HER2_negative], 
-                             [triple_negative]} and
-                        (tnm_t > '1a' or tnm_n > '0'):                   [taxanes],
+                            {#luminal_B_HER2_negative, 
+                             #triple_negative} and
+                        (tnm_t > '1a' or tnm_n > '0'):                   #taxanes,
                         ------------------------------------------------------------------------
-                        molecular_subtype = [luminal_A] and 
-                        (tnm_t ≥ '3' or tnm_n ≥ '2' or tnm_g ≥ '3'):  [anthracyclines],
+                        molecular_subtype = #luminal_A and 
+                        (tnm_t ≥ '3' or tnm_n ≥ '2' or tnm_g ≥ '3'):  #anthracyclines,
                         ------------------------------------------------------------------------
-                        molecular_subtype = [luminal_B_HER2_positive] and 
+                        molecular_subtype = #luminal_B_HER2_positive and 
                         (tnm_t = '1b' or tnm_t = '1c' and tnm_n = '0') or
-                        molecular_subtype = [HER2_positive] and 
-                        (tnm_t = '1b' and tnm_n = '0'):                  [paditaxel_trastuzumab]
+                        molecular_subtype = #HER2_positive and 
+                        (tnm_t = '1b' and tnm_n = '0'):                  #paditaxel_trastuzumab
                         ========================================================================
                     ;,
                 --------------------------------------------------------------------------------
