--- a/docs/decision_language/master01-preface.adoc
+++ b/docs/decision_language/master01-preface.adoc
@@ -23,7 +23,7 @@ Related documents include:
 
 == Status
 
-This specification is in the {spec_status} state. The development version of this document can be found at {openehr_proc_latest_decision_language}[{openehr_proc_latest_decision_language}^].
+This specification is in the {spec_status} state.
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
