--- a/docs/overview/master01-preface.adoc
+++ b/docs/overview/master01-preface.adoc
@@ -25,7 +25,7 @@ Related documents include:
 
 == Status
 
-This document is in the {spec_status} state. The development version of this document can be found at {openehr_proc_latest_overview}[{openehr_proc_latest_overview}^].
+This document is in the {spec_status} state.
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
