--- a/docs/process_examples/master01-preface.adoc
+++ b/docs/process_examples/master01-preface.adoc
@@ -19,7 +19,7 @@ Prerequisite documents for reading this document include:
 
 == Status
 
-This specification is in the {spec_status} state. The development version of this document can be found at {openehr_proc_latest_process_examples}[{openehr_proc_latest_process_examples}^].
+This specification is in the {spec_status} state.
 
 Known omissions or questions are indicated in the text with a 'to be determined' paragraph, as follows:
 [.tbd]
