--- a/docs/task_planning/manifest_vars.adoc
+++ b/docs/task_planning/manifest_vars.adoc
@@ -1,5 +1,5 @@
 :spec_title: Task Planning (TP) Specification
 :copyright_year: 2017
-:spec_status: TRIAL
+:spec_status: RETIRED
 :keywords: workflow, task, planning, EHR, EMR, reference model, openehr
 :description: openEHR Task Planning specification
