--- a/docs/tp_vml/manifest_vars.adoc
+++ b/docs/tp_vml/manifest_vars.adoc
@@ -1,5 +1,5 @@
 :spec_title: Task Planning Visual Modelling Language (TP-VML)
 :copyright_year: 2017
-:spec_status: TRIAL
+:spec_status: RETIRED
 :keywords: task planning, visual language, workflow, care pathway, guideline, order set
 :description: openEHR Task Planning Visual Modelling Language
