--- a/docs/tp_vml/master00-amendment_record.adoc
+++ b/docs/tp_vml/master00-amendment_record.adoc
@@ -4,12 +4,20 @@
 |===
 |Issue|Details|Raiser|Completed
 
+4+^h|*PROC Release 1.7.0*
+
+|[[latest_issue]]1.7.0
+|{spec_tickets}/SPECPROC-52[SPECPROC-52^]. Retire Process component and all its specifications.
+|openEHR SEC
+|[[latest_issue_date]]07 Aug 2024
+
+
 4+^h|*PROC Release 1.6.0*
 
-|[[latest_issue]]0.6.3
+|0.6.3
 |Add Task Repeat.
 |T Beale
-|[[latest_issue_date]]15 Nov 2020
+|15 Nov 2020
 
 |0.6.2
 |Add parallel synchronisation example.
