--- a/docs/decision_language/master.adoc
+++ b/docs/decision_language/master.adoc
@@ -20,8 +20,6 @@ include::{ref_dir}/docs/references/reference_definitions.adoc[]
 // ============================================= Asciidoc BODY ===============================================
 //
 
-include::master00-amendment_record.adoc[leveloffset=+1]
-
 //
 // --------------------------------------------- Preface -----------------------------------------------
 //
@@ -52,6 +50,11 @@ include::master05-dlm_model.adoc[leveloffset=+1]
 //include::master08-data_context.adoc[leveloffset=+1]
 //include::master09-computing_context.adoc[leveloffset=+1]
 
+//
+// --------------------------------------------- Amendment Record -----------------------------------------------
+//
+:sectnums!:
+include::master00-amendment_record.adoc[leveloffset=+1]
 
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
