--- a/docs/overview/master.adoc
+++ b/docs/overview/master.adoc
@@ -20,8 +20,6 @@ include::{ref_dir}/docs/references/reference_definitions.adoc[]
 // ============================================= Asciidoc BODY ===============================================
 //
 
-include::master00-amendment_record.adoc[leveloffset=+1]
-
 //
 // --------------------------------------------- Preface -----------------------------------------------
 //
@@ -64,6 +62,12 @@ include::master04-artefacts.adoc[leveloffset=+1]
 include::master05-deployment_paradigm.adoc[leveloffset=+1]
 include::master06-conceptual_architecture.adoc[leveloffset=+1]
 include::master07-deployment_architectures.adoc[leveloffset=+1]
+
+//
+// --------------------------------------------- Amendment Record -----------------------------------------------
+//
+:sectnums!:
+include::master00-amendment_record.adoc[leveloffset=+1]
 
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
