--- a/docs/process_examples/master.adoc
+++ b/docs/process_examples/master.adoc
@@ -20,8 +20,6 @@ include::{ref_dir}/docs/references/reference_definitions.adoc[]
 // ============================================= Asciidoc BODY ===============================================
 //
 
-include::master00-amendment_record.adoc[leveloffset=+1]
-
 //
 // --------------------------------------------- Preface -----------------------------------------------
 //
@@ -65,6 +63,12 @@ include::master09-cha2ds_vasc.adoc[leveloffset=+1]
 include::master10-qrisk.adoc[leveloffset=+1]
 include::master11-news2.adoc[leveloffset=+1]
 include::master20-common_DLMs.adoc[leveloffset=+1]
+
+//
+// --------------------------------------------- Amendment Record -----------------------------------------------
+//
+:sectnums!:
+include::master00-amendment_record.adoc[leveloffset=+1]
 
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
