--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -20,8 +20,6 @@ include::{ref_dir}/docs/references/reference_definitions.adoc[]
 // ============================================= Asciidoc BODY ===============================================
 //
 
-include::master00-amendment_record.adoc[leveloffset=+1]
-
 //
 // --------------------------------------------- Preface -----------------------------------------------
 //
@@ -102,6 +100,11 @@ include::master10-model_history.adoc[leveloffset=+1]
 include::master11-service_model.adoc[leveloffset=+1]
 include::master12-ehr_semantics.adoc[leveloffset=+1]
 
+//
+// --------------------------------------------- Amendment Record -----------------------------------------------
+//
+:sectnums!:
+include::master00-amendment_record.adoc[leveloffset=+1]
 
 //
 // --------------------------------------------- REFERENCES -----------------------------------------------
